--- a/Src/DiceGame/DiceGame.csproj
+++ b/Src/DiceGame/DiceGame.csproj
@@ -3,8 +3,19 @@
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <UseWPF>true</UseWPF>
+    <UseWindowsForms>true</UseWindowsForms>
     <RootNamespace>GTeck.DiceGame</RootNamespace>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Remove="Resources\Dice1.svg" />
+    <None Remove="Resources\Dice2.svg" />
+    <None Remove="Resources\Dice3.svg" />
+    <None Remove="Resources\Dice4.svg" />
+    <None Remove="Resources\Dice5.svg" />
+    <None Remove="Resources\Dice6.svg" />
+    <None Remove="Resources\icon.svg" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="System.CommandLine" />
@@ -42,5 +53,15 @@
     <Reference Include="Eddyfi.Core.CommonUI">
       <HintPath>$(TargetDir)Eddyfi.Core.CommonUI.dll</HintPath>
     </Reference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Resources\Dice1.svg" />
+    <Resource Include="Resources\Dice2.svg" />
+    <Resource Include="Resources\Dice3.svg" />
+    <Resource Include="Resources\Dice4.svg" />
+    <Resource Include="Resources\Dice5.svg" />
+    <Resource Include="Resources\Dice6.svg" />
+    <Resource Include="Resources\icon.svg" />
   </ItemGroup>
 </Project>
